# SimpleFIR

./: CMakeLists.txt
include/: simple_fir.hpp
src/: main.cpp
